--- a/denovroo/deno.json
+++ b/denovroo/deno.json
@@ -3,6 +3,7 @@
     "dev": "deno run --watch main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "oak":"https://deno.land/x/oak/mod.ts"
   }
 }
